add_executable(run_frontend_offline
        run_frontend_offline.cc
)

add_dependencies(run_frontend_offline ${catkin_EXPORTED_TARGETS})

target_link_libraries(run_frontend_offline
        ${PROJECT_NAME}.libs
        ${third_party_libs}
        ${catkin_LIBRARIES}
)

add_executable(run_loop_offline
        run_loop_offline.cc
)

add_dependencies(run_loop_offline ${catkin_EXPORTED_TARGETS})

target_link_libraries(run_loop_offline
        ${PROJECT_NAME}.libs
        ${third_party_libs}
        ${catkin_LIBRARIES}
)

add_executable(run_slam_offline
        run_slam_offline.cc
)

add_dependencies(run_slam_offline ${catkin_EXPORTED_TARGETS})

target_link_libraries(run_slam_offline
        ${PROJECT_NAME}.libs
        ${third_party_libs}
        ${catkin_LIBRARIES}
)

add_executable(run_slam_online
        run_slam_online.cc
)

add_dependencies(run_slam_online ${catkin_EXPORTED_TARGETS})

target_link_libraries(run_slam_online
        ${PROJECT_NAME}.libs
        ${third_party_libs}
        ${catkin_LIBRARIES}
)

add_executable(run_loc_offline
        run_loc_offline.cc
)

add_dependencies(run_loc_offline ${catkin_EXPORTED_TARGETS})

target_link_libraries(run_loc_offline
        ${PROJECT_NAME}.libs
        ${third_party_libs}
        ${catkin_LIBRARIES}
)

add_executable(run_loc_online
        run_loc_online.cc
)

add_dependencies(run_loc_online ${catkin_EXPORTED_TARGETS})

target_link_libraries(run_loc_online
        ${PROJECT_NAME}.libs
        ${third_party_libs}
        ${catkin_LIBRARIES}
)

add_executable(test_ui
        test_ui.cc
)

add_dependencies(test_ui ${catkin_EXPORTED_TARGETS})

target_link_libraries(test_ui
        ${PROJECT_NAME}.libs
        ${third_party_libs}
        ${catkin_LIBRARIES}
)

install(TARGETS 
        run_slam_offline 
        run_slam_online 
        run_loc_offline 
        run_loc_online
        run_frontend_offline
        run_loop_offline
        test_ui
        RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)
